--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
     <link rel="stylesheet" href="bootstrap.css" />
   </head>
   <body>
+    <h1 class="text-center text-warning bg-dark p-4">Responsive Pricing Table</h1>
     <div class="container-fluid">
-      <div class="row justify-content-between text-white text-center p-5 ">
+      <div class="row justify-content-between text-white text-center p-5">
         <div class="col-12 col-sm-3 bg-dark p-2">
           <div class="bg-success"><h2>Basic</h2></div>
           <div>
